Warn when using a deprecated provider (#967)